dyntoy 1.0.0 (unreleased)

* Initial release of dyntoy