@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+export(add_velocity)
 export(generate_dataset)
 export(generate_datasets)
 export(generate_milestone_network)
@@ -17,13 +18,13 @@ export(model_multifurcating)
 export(model_multiple_looping)
 export(model_tree)
 export(topology_models)
-export(velocitise)
 import(dplyr)
 import(dynutils)
 import(dynwrap)
 import(purrr)
 import(tibble)
 import(tidyr)
+importFrom(assertthat,assert_that)
 importFrom(dynwrap,add_prior_information)
 importFrom(magrittr,"%$%")
 importFrom(magrittr,"%<>%")
