@@ -6,6 +6,7 @@
 #' @import dynutils
 #' @import dynwrap
 #' @import purrr
+#' @importFrom assertthat assert_that
 #' @importFrom magrittr %<>% %$% set_colnames
 #' @importFrom stats runif
 #' @importFrom testthat expect_gte
