@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/6-generate_dataset.R
+% Please edit documentation in R/7-generate_dataset.R
 \name{generate_dataset}
 \alias{generate_dataset}
 \title{Generate a toy dataset}
@@ -12,7 +12,7 @@ generate_dataset(id = "", model = c("linear", "cyclic", "bifurcating",
   runif(1, 100, 1000), sample_dispersion_count = function(mean)
   map_dbl(mean, ~runif(1, ./10, ./4)), dropout_probability_factor = 100,
   differentially_expressed_rate = 1, normalise = FALSE,
-  add_prior_information = TRUE)
+  add_prior_information = TRUE, add_velocity = TRUE)
 }
 \arguments{
 \item{id}{An id for the dataset}
@@ -42,6 +42,8 @@ part of a divergence.}
 \item{normalise}{Whether or not to normalise the dataset}
 
 \item{add_prior_information}{Whether to add prior information}
+
+\item{add_velocity}{Whether to simulate RNA velocity}
 }
 \description{
 Generate a toy dataset
