@@ -1,5 +1,5 @@
 % Generated by roxygen2: do not edit by hand
-% Please edit documentation in R/7-generate_datasets.R
+% Please edit documentation in R/8-generate_datasets.R
 \name{generate_datasets}
 \alias{generate_datasets}
 \title{Generate toy datasets with dyntoy}
