@@ -1,3 +1,5 @@
 # dyntoy 1.0.0 (unreleased)
 
 * Initial release of dyntoy
+
+* Generates simple toy datasets containg trajectories, with expression, RNA velocity, differentially expressed features
